# algebraic-contours

./: .gitignore  CMakeLists.txt
src/clough_tocher_patches/: CMakeLists.txt  Clough_Toucher_derivation.py  TestCloughTocher.ipynb  clough_tocher_autogen_constraint_matrices.hpp  clough_tocher_autogen_matrix_coeffs.hpp  clough_tocher_constraint_matrices.cpp  clough_tocher_constraint_matrices.hpp  clough_tocher_matrices.cpp  clough_tocher_matrices.hpp  clough_tocher_patch.cpp  clough_tocher_patch.hpp  clough_tocher_surface.cpp  clough_tocher_surface.hpp  generate_ct_constraint_matrices.py  pretty_print.py
src/core/: affine_manifold.cpp  affine_manifold.h
src/exec/: CMakeLists.txt  generate_cubic_surface.cpp  view_quadratic_spline.cpp
src/quadratic_spline_surface/: CMakeLists.txt  optimize_spline_surface.cpp  optimize_spline_surface.h  quadratic_spline_surface.h  quadratic_spline_surface_msh_writer.cpp
